[package]
name = "convert-mame-extras-romvault"
version = "1.0.1"
edition = "2021"
authors = ["Fabrice Morin" ]
description = "Convert MAME Extras datafiles to a datafile compatible with RomVault"
documentation = "https://github.com/fragoulin/convert-mame-extras-romvault"
readme = "README.md"
homepage = "https://github.com/fragoulin/convert-mame-extras-romvault"
repository = "https://github.com/fragoulin/convert-mame-extras-romvault"
license = "MIT"
keywords = ["MAME", "Extras", "RomVault", "Pleasuredome"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
quick-xml = "0.37.5"
regex = "1.11.1"
zip = "4.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
data-encoding = "2.9.0"
predicates = "3.1.3"
ring = "0.17.14"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[lints.rust]
missing_docs = "warn"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
